# R-Type

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  compile_commands.json  justfile  score.json  scores.txt
.cloud/docker/: Dockerfile
.config/client/: user
.github/workflows/: build.yaml  commits.yaml  images.yaml  linter.yaml  mirror.yaml  push.yaml  windows.yaml
assets/: levels.txt
bootstrap/: CMakeLists.txt  main.cpp
bootstrap/include/: AssetManager.hh  Component.hh  Components.hh  Create.hh  Entity.hh  Registry.hh  SparseArray.hh  Systems.hh  component.hh  entity.hh  registry.hh
bootstrap/src/: Component.cc  Main.cc  Registry.cc
buil/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  R-Type.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clean_server.vcxproj  clean_server.vcxproj.filters
buil/client/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  r-type_client.sln  r-type_client.vcxproj  r-type_client.vcxproj.filters
buil/cmake/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
buil/graphic/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
buil/hunter/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  hunterGame.sln  hunterGame.vcxproj  hunterGame.vcxproj.filters
buil/network/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
buil/server/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  r-type_server.sln  r-type_server.vcxproj  r-type_server.vcxproj.filters
client/: CMakeLists.txt  main.cpp
client/Gameplay/: Game.cpp  Game.hpp
client/Gameplay/Asteroid/: Asteroid.cpp  Asteroid.hpp
client/Menu/: Menu.cpp  Menu.hpp
client/includes/: ArgHandler.hpp  Client.hpp  ClientNetwork.hpp  Components.hpp  Gameplay.hpp  LeaderBoard.hpp  Lobby.hpp  Main.hpp  Scenes.hpp  Score.hpp  Systems.hpp
client/raylib/: BENCHMARK.md  raylib.cc  raylib.hh
client/src/: ArgHandler.cpp  Client.cpp  ClientNetwork.cpp  Main.cpp
client/src/scenes/game/: Game.cpp  Lobby.cpp
client/src/scenes/menu/: LeaderBoard.cpp  Menu.cpp
client/src/scenes/settings/: Settings.cpp
cmake/: CMakeLists.txt
docs/docs/: intro.md
docs/docusaurus/: Dockerfile  README.md  docusaurus.config.ts
docs/doxygen/: Dockerfile
docs/html/: Arguments_8hpp.html  Arguments_8hpp_source.html  AssetManager_8hh.html  AssetManager_8hh_source.html  Components_8hh.html  Create_8hh.html  Entity_8hh.html  Entity_8hh_source.html  Game_8hpp_source.html  Network_8hpp.html  Network_8hpp_source.html  Registry_8hh.html  Registry_8hh_source.html  Server_8hpp.html  Server_8hpp_source.html  SparseArray_8hh.html  annotated.html  classArguments-members.html  classArguments.html  classArguments_1_1ArgumentsException-members.html  classArguments_1_1ArgumentsException.html  classAssetManager.html  classClient.html  classCreate.html  classGame.html  classInteraction-members.html  classNetwork.html  classServer.html  classSystems-members.html  classSystems.html  classes.html  classregistry-members.html  classsparse__array-members.html  classsparse__array.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_484e16b7f23165de9367bba0deb2c68e.html  dir_5fa2cd4ce4b531552b55c3e23aafec39.html  dir_81cff4f9713af251ffa4351ce609c316.html  dir_a063914ab482288b7b0e1b2fca86158c.html  doxygen_crawl.html  (+18 more)
docs/rfc/: Dockerfile  protocol.txt
ecs/: CMakeLists.txt  main.cpp
ecs/include/: AssetManager.hh  Components.hh  Create.hh  IndexedZipper.hh  IndexedZipperIterator.hh  Registry.hh  SparseArray.hh  Systems.hh  Zipper.hh  Zipper.hxx  ZipperIterator.hh  allocator.hh  component.hh  entity_manager.hh  registry.hh
ecs/includes/: Components.hh  Entity.hh  IndexedZipper.hh  IndexedZipperIterator.hh  NetworkEcs.hpp  Registry.hh  SparseArray.hh  Systems.hh  Zipper.hh  ZipperIterator.hh
ecs/src/: Main.cc  NetworkEcs.cpp
ecs/test/: test.cpp
graphic/: CMakeLists.txt
graphic/include/: IRenderer.hpp
graphic/includes/: IRenderer.hpp
graphic/raylib_graphic/: CMakeLists.txt  RaylibGraphic.cpp  RaylibGraphic.hpp
hunter/: CMakeLists.txt  hunter.hpp  main.cpp
hunter/includes/: Hunter.hpp
hunter/src/: Hunter.cpp
includes/: RTypeProtocol.hpp
k8s/docs/: deployment.yml  docusaurus.deployment.yml  (+5 more)
network/: CMakeLists.txt
network/asio_network/: CMakeLists.txt
network/asio_network/client/: AsioClient.cpp  AsioClient.hpp  CMakeLists.txt
network/asio_network/server/: AsioServer.cpp  AsioServer.hpp  CMakeLists.txt
network/packet_network/: CMakeLists.txt  Packet.cpp  Packet.hpp  PacketHandler.cpp  PacketHandler.hpp
old_client/: CMakeLists.txt  main.cpp
platformer/: CMakeLists.txt
platformer/includes/: Platformer.hpp
platformer/src/: Platformer.cpp  main.cpp
platformer/src/systems/: CameraSystem.cpp  CollisionSystem.cpp  InputSystem.cpp  PlatformGenerationSystem.cpp  PlayerMovementSystem.cpp  RenderingSystem.cpp
raylib/: raylib.cc  raylib.hh
server/: CMakeLists.txt  main.cpp
server/includes/: ArgHandler.hpp  Arguments.hpp  Components.hpp  ErrorHandling.hpp  Game.hpp  Lobby.hpp  Network.hpp  Score.hpp  Server.hpp  Systems.hpp
server/includes/entities/: BonusForce.hpp  BonusHealth.hpp  BonusTripleShot.hpp  Boss.hpp  BossHeart.hpp  EnemyBullet.hpp  EnemyFly.hpp  EnemyTank.hpp  EnemyTurret.hpp  Player.hpp  PlayerBullet.hpp  Shoot.hpp  Wall.hpp
server/src/: ArgHandler.cpp  Arguments.cpp  ErrorHandling.cpp  Game.cpp  Lobby.cpp  Main.cpp  Network.cpp  Score.cpp  Server.cpp  score.json
server/src/entities/: BonusForce.cpp  BonusHealth.cpp  BonusTripleShot.cpp  Boss.cpp  BossHeart.cpp  EnemyBullet.cpp  EnemyFly.cpp  EnemyTank.cpp  EnemyTurret.cpp  Player.cpp  PlayerBullet.cpp  Shoot.cpp  Wall.cpp
server/test/: test.cpp
test_client/: CMakeLists.txt  main.cpp
(+274 files in other folders)
